dealed with xss attacks and started to create account delation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - ./frontend/ws-server/:/app
+      - ./frontend/ws-server/:/server
       - /app/node_modules
 
   db:
