--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "dompurify": "^3.1.4",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
